some cleanup and preliminary cache implementations

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,7 @@
 [GENERAL]
 ibt_reader_path = telem/util
+save_cache = 1
+use_cache = 0
 
 [PLACEHOLDERS]
 driver = %d
@@ -14,14 +16,15 @@ ibt_path = telemetry/ibt
 
 [PATHS]
 # file tree
-folder  = telemetry/
+folder  = telem/
 ibt_folder = ${folder}
 csv_folder = ${folder}
 ibt_ignore = src/.ibtignore
+fs_cache = cache/fs.pkl
 
 [FILES]
 keep_ibt = 0
-keep_csv = 1
+keep_csv = 0
 
 # Google OAUTH2 credentials
 [AUTH]
